--- a/app/partials/directives/fileFormats.html
+++ b/app/partials/directives/fileFormats.html
@@ -1,5 +1,6 @@
 <div class="btn-group button-group-pad">
     <label class="btn btn-default" ng-repeat="format in formats" ng-class="{true: 'active', false: ''}[format.selected]">
-        <input type="radio" style="display:none" ng-model="format.selected" ng-change="selectFormat(format)"> {{format.name.toUpperCase()}}
+        <input type="radio" style="display:none" ng-model="format.selected" ng-change="selectFormat(format)"/>
+        <span ng-bind="format.name.toUpperCase()"></span>
     </label>
 </div>
