--- a/app/partials/directives/filterBuilder.html
+++ b/app/partials/directives/filterBuilder.html
@@ -76,7 +76,8 @@
         <input type="text" class="form-control" placeholder="Value" ng-keyup="$event.keyCode == 13 && updateFilterRow(filterRow.database.name, filterRow.table.name, filterRow.index)" ng-model="filterRow.value" ng-change="dirtyFilterRow(filterRow)" ng-show="!(filterRow.isDate)">
         <div class="neon-datetimepicker dropdown" ng-show="(filterRow.isDate)">
             <button class="btn btn-default dropdown-toggle" id="date-dropdown-{{$index}}" role="button" data-toggle="dropdown" data-target="#" href="#" title="{{filterRow.value ? filterRow.value.toUTCString() : 'Choose Date'}}">
-                <span class="glyphicon glyphicon-calendar"></span> {{filterRow.value ? filterRow.value.toUTCString() : 'Choose Date'}}
+                <span class="glyphicon glyphicon-calendar"></span>
+                <span ng-bind="(filterRow.value ? filterRow.value.toUTCString() : 'Choose Date')"></span>
             </button>
             <ul class="dropdown-menu" role="menu">
                 <datetimepicker data-ng-model="filterRow.value" data-on-set-time="dirtyFilterRow(filterRow)" data-datetimepicker-config="{ dropdownSelector: '#date-dropdown-{{$index}}', startView: 'year', minView: 'hour' }"/>
@@ -127,7 +128,8 @@
         <input type="text" class="form-control" id="filter-value" size="42" placeholder="Value" ng-keyup="$event.keyCode == 13 && addFilterRow()" ng-model="selectedValue" ng-disabled="(fields.length == 0)" ng-required="true" ng-show="!(selectedFieldIsDate)" ng-change="onSelectedValueChange()">
         <div class="neon-datetimepicker dropdown" ng-show="(selectedFieldIsDate)">
             <button class="btn btn-default dropdown-toggle" id="date-dropdown" role="button" data-toggle="dropdown" data-target="#" href="#" title="{{selectedValue ? selectedValue.toUTCString() : 'Choose Date'}}">
-                <span class="glyphicon glyphicon-calendar"></span> {{selectedValue ? selectedValue.toUTCString() : 'Choose Date'}}
+                <span class="glyphicon glyphicon-calendar"></span>
+                <span ng-bind="(selectedValue ? selectedValue.toUTCString() : 'Choose Date')"></span>
             </button>
             <ul class="dropdown-menu" role="menu">
                 <datetimepicker data-ng-model="selectedValue" data-on-set-time="onSelectedValueChange()" data-datetimepicker-config="{ dropdownSelector: '#date-dropdown', startView: 'year', minView: 'hour' }"/>
