--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -1,5 +1,5 @@
 <div class="header-container" ng-show="!(hideHeader)">
-    <span class="header-text pull-left">{{options.table.prettyName}}</span>
+    <span class="header-text pull-left" ng-bind="options.table.prettyName"></span>
 
     <options-menu parent-element="element" export-function="makeLinechartExportObject" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText" ng-show="!(hideAdvancedOptions)">
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
@@ -52,8 +52,8 @@
 
         <div class="legend-item legend-item-clickable" title="{{colorMapping.series}} {{getLegendItemAggregationText(colorMapping)}}" ng-repeat="colorMapping in colorMappings" ng-click="toggleSeries(colorMapping.series)" ng-class="{true: 'legend-hidden', false: ''}[colorMapping.hidden]">
             <span class="legend-icon" style="background-color: {{colorMapping.color}}"></span>
-            <span class="legend-text">{{colorMapping.series}}</span>
-            <span class="legend-text legend-text-small">{{getLegendItemAggregationText(colorMapping)}}</span>
+            <span class="legend-text" ng-bind="colorMapping.series"></span>
+            <span class="legend-text legend-text-small" ng-bind="getLegendItemAggregationText(colorMapping)"></span>
         </div>
 
         <span class="no-data pull-left" ng-show="noData">No data for current filters.</span>
