--- a/app/partials/directives/linksPopup.html
+++ b/app/partials/directives/linksPopup.html
@@ -13,7 +13,7 @@
                             <input ng-repeat="arg in link.args" type="hidden" name="{{arg.name}}" value="{{arg.value}}">
                             <button type="submit" value="submit" tabindex="0" title="{{link.name}}">
                                 <img alt="{{link.name}}" class="img-thumbnail center-block" ng-src="{{link.image}}">
-                                <span class="text-uppercase small">{{link.name}}</span>
+                                <span class="text-uppercase small" ng-bind="link.name"></span>
                             </button>
                         </form>
                         </li>
