--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -4,7 +4,7 @@
             <label><span class="glyphicon glyphicon-info-sign"></span> SHIFT + DRAG on Map to Filter</label>
         </div>
         <div class="form-group layer-options-container" ng-repeat="layer in options.layers">
-            <label>{{layer.name}}</label>
+            <label ng-bind="layer.name"></label>
             <div class="form-group layer-options">
                 <div class="btn-group">
                     <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.visible === true]">
@@ -22,9 +22,7 @@
                         ng-required="true" ng-change="updateLayer(layer.filterKeys)">
                     </select>
                 </div>
-                <div class="error">
-                    {{ layer.error }}
-                </div>
+                <div class="error" ng-bind="layer.error"></div>
             </div>
             <div class="clearfix"></div>
         </div>
