NEON-1631 Use CartoDB map tiles.

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -154,7 +154,7 @@
     }
 
     .olMap {
-        background-color: #9f9f9f;
+        background-color: #CDD2D4;
         border: @border;
         border-radius: 0 0 4px 4px;
         width: auto !important;
@@ -178,8 +178,8 @@
 
     .olControlAttribution {
         bottom: 0;
-        color: @main-text-color;
-        text-shadow: 0 1px 0 @text-shadow-color;
+        right: 5px;
+        color: #fff;
     }
 
     .olControlZoom {
