Added some feedback for when records are being added and converted to keep users from getting antsy. Also made some various and sundry fixes to make jscs happy.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -624,12 +624,22 @@ label{
     cursor: default;
 }
 
-.floatLeft {
-    float: left;
+.alignLeft {
+    text-align: left;
 }
 
-.floatRight {
-    float: right;
+.alignRight {
+    text-align: right;
+}
+
+.importGuessesTable {
+    width: 100%;
+}
+
+tr.borderedRow {
+    border-top: 1px solid #666;
+    border-bottom: 1px solid #666;
+    border-collapse: collapse;
 }
 
 .navbar{
