Fixing text color in map attribution for light-colored map tiles.

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -242,7 +242,7 @@
     .olControlAttribution {
         bottom: 0;
         right: 5px;
-        color: #fff;
+        color: @main-text-color;
     }
 
     .olControlZoom {
