NEON-1431/1627 Code review modifications - allowing the timeline selector's animation buttons to be hidden and adding some documentation .

--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -66,6 +66,18 @@
             </div>
             <div class="clearfix"></div>
         </div>
+        <div class="form-group">
+            <label>Animation Controls</label>
+            <div class="btn-group">
+                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.showAnimationControls]">
+                    <input type="radio" style="display:none" ng-model="options.showAnimationControls" value="true"> Show 
+                </label>
+                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[!options.showAnimationControls]">
+                    <input type="radio" style="display:none" ng-model="options.showAnimationControls" value="false"> Hide
+                </label>
+            </div>
+            <div class="clearfix"></div>
+        </div>
     </options-menu>
 </div>
 
@@ -104,18 +116,20 @@
             <datetimepicker ng-show="(options.granularity === 'month')" data-ng-model="filter.end" data-datetimepicker-config="{ startView: 'month', minView: 'month' }" ng-change="handleDateTimePickChange()"/>
             <datetimepicker ng-show="(options.granularity === 'year')" data-ng-model="filter.end" data-datetimepicker-config="{ startView: 'year', minView: 'year' }" ng-change="handleDateTimePickChange()"/>
         </ul>
-        <button class="btn btn-default" role="button" 
-            ng-click="(options.animatingTime) ? pauseTimeAnimation() : playTimeAnimation()">
-            <span class="glyphicon" 
-                ng-class="{true: 'glyphicon-pause', false: 'glyphicon-play-circle'}[options.animatingTime]"></span> 
-            <span ng-bind="(options.animatingTime) ? 'Pause' : 'Play'"></span>
-        </button>
-        <button class="btn btn-default" role="button" ng-click="stepTimeAnimation()">
-            <span class="glyphicon glyphicon-step-forward"></span> Step
-        </button>
-        <button class="btn btn-default" role="button" ng-click="stopTimeAnimation()">
-            <span class="glyphicon glyphicon-stop"></span> Stop
-        </button>
+        <span ng-if="options.showAnimationControls">
+            <button class="btn btn-default" role="button" 
+                ng-click="(options.animatingTime) ? pauseTimeAnimation() : playTimeAnimation()">
+                <span class="glyphicon" 
+                    ng-class="{true: 'glyphicon-pause', false: 'glyphicon-play-circle'}[options.animatingTime]"></span> 
+                <span ng-bind="(options.animatingTime) ? 'Pause' : 'Play'"></span>
+            </button>
+            <button class="btn btn-default" role="button" ng-click="stepTimeAnimation()">
+                <span class="glyphicon glyphicon-step-forward"></span> Step
+            </button>
+            <button class="btn btn-default" role="button" ng-click="stopTimeAnimation()">
+                <span class="glyphicon glyphicon-stop"></span> Stop
+            </button>
+        </span>
     </div>
 </div>
 
