NEON-1431/1627 Code review modifications - removing the animation channel to just reuse the data selected channel in the timelineSelector.  Also removed the animation messenger from the timelineSelector directive.  Since some functionality for emitting selection events and responding to events is split across timelineSelector and timelineSelectorChart, I added a messenger to the timelineSelectorChart so it can handle it's own events rather than accepting the timelineSelector's messenger via a binding.  This matched our general pattern.  Otherwise, the timelineSelector's animation methods would need to call a draw method inside of timelineSelector via $emit/$broadcast or a two-way binding. $emit is just another form of message and a two-way binding to a specific draw method may cause issues if some element ever tried to included multiple timeline charts.

--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -135,7 +135,7 @@
 
 <div class="collapsed" ng-class="{true: 'collapsed', false: ''}[options.collapsed]" ng-hide="noData">
     <div timeline-selector-chart timeline-data='data' timeline-brush='brush' collapsed='options.collapsed' extent-dirty='extentDirty'
-        primary-series='options.primarySeries' granularity='options.granularity' show-focus='options.showFocus' messenger='messenger'></div>
+        primary-series='options.primarySeries' granularity='options.granularity' show-focus='options.showFocus'></div>
 </div>
 
 <span class="no-data pull-left" ng-show="noData">No data for current filters.</span>
