--- a/app/css/style.less
+++ b/app/css/style.less
@@ -70,6 +70,11 @@ h6, .h6 {
 
 }
 
+html {
+    width:100vw;
+    overflow-x:hidden;
+}
+
 label{
     font-size: 12px;
     color: @main-text-color;
