--- a/app/partials/directives/filterTray.html
+++ b/app/partials/directives/filterTray.html
@@ -1,6 +1,6 @@
 <div class="filter-tray-filters" ng-show="filters.formatted.length > -100">
     <div ng-repeat="filter in filters.formatted" class="filter-tray-filter">
         <span class="filter-label">{{filter.name}}</span>
-        <span class="glyphicon glyphicon-remove" ng-click="handleFilterRemove(filter.ids)"></span>
+        <span class="glyphicon glyphicon-remove" ng-click="handleFilterRemove(filter.ids)" ng-hide="(filter.name.indexOf('Filter Builder') !== -1)"></span>
     </div>
 </div>
