Defaulting the animation controls on the timeline selector to be hidden.  Also correcting an issue in the timeline selector chart where the next-to-last and last time buckets were highlighted together when only the next-to-last should be highlighted.

--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -72,7 +72,7 @@
                 <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.showAnimationControls]">
                     <input type="radio" style="display:none" ng-model="options.showAnimationControls" value="true"> Show 
                 </label>
-                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[!options.showAnimationControls]">
+                <label class="btn btn-default" ng-class="{true: '', false: 'active'}[options.showAnimationControls]">
                     <input type="radio" style="display:none" ng-model="options.showAnimationControls" value="false"> Hide
                 </label>
             </div>
