Made changes based on code review. Better documentation, moved some things from javascript to use angular html, and some other small changes.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -13,6 +13,10 @@
 // limitations under the License.
 //
 
+.centered {
+    text-align: center;
+}
+
 @-webkit-keyframes load8 {
     0% {
         -webkit-transform: rotate(0deg);
